# ONNXRuntime

./: .gitignore  CMakeLists.txt  README.md
examples/ui_detector/: CMakeLists.txt  README.md
examples/ui_detector/scripts/: fetch_model.ps1  fetch_ocr.ps1
examples/ui_detector/src/: detector.cpp  detector.h  image_io.cpp  image_io.h  main.cpp  ocr_pipeline.cpp  ocr_pipeline.h  recognizer.cpp  recognizer.h
examples/ui_detector/src/gui/: App.cpp  App.h  ImageView.cpp  ImageView.h  MainFrame.cpp  MainFrame.h  Resource.h  Resource.rc  Worker.cpp  Worker.h  stdafx.h
scripts/: fetch_model.ps1  fetch_onnxruntime.ps1  fetch_stb.ps1  gen_labels.ps1
src/: classifier.cpp  classifier.h  imagenet_labels.cpp  main.cpp
